--- a/app/elements/tokens-list-element.html
+++ b/app/elements/tokens-list-element.html
@@ -39,7 +39,8 @@
         <div hidden$="[[!hasTokens]]" class="info-list">
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
-              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
+              <paper-tooltip for="selectAllBtn" position="top">Select all</paper-tooltip>
+              <paper-checkbox id="selectAllBtn" checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
             </div>
             <div class="flexchild">Last Accessed</div>
             <div class="flexchild"></div>
