--- a/app/elements/script-item-element.html
+++ b/app/elements/script-item-element.html
@@ -25,7 +25,7 @@
       }
     </style>
 
-    <paper-item on-tap="_viewScript" class="info-item flex-horizontal-with-ratios">
+    <paper-item on-tap="_viewScript" class$="info-item flex-horizontal-with-ratios [[indexClass]]">
       <div class="flexchild">
         <paper-checkbox checked="{{selected}}" on-tap="_selectScript">[[script.name]]</paper-checkbox>
       </div>
@@ -49,6 +49,16 @@
             value: false,
             notify: true
           },
+          index: {
+            type: Number
+          },
+          count: {
+            type: Number
+          },
+          indexClass: {
+            type: String,
+            computed: '_computeIsIndexClass(index, count)'
+          },
           isDefaultText: {
             type: String,
             computed: '_computeIsDefaultText(script.isDefault)'
@@ -57,8 +67,13 @@
         listeners: {
           'selected-changed': '_selectScriptChanged'
         },
-        ready: function() {
-
+        _computeIsIndexClass: function(index, count) {
+          var classes = [];
+          classes.push(
+            (index + 1) % 2 == 0 ? 'even' : 'odd',
+            index + 1 == count ? 'last' : null
+          );
+          return classes.join(' ');
         },
         _selectScriptChanged: function(e) {
           var selected = e.detail.value;
