--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -249,6 +249,8 @@
               var index = this.scripts.indexOf(el);
               this.splice('scripts', index, 1);
             }, this);
+
+            this._showNotification('Scripts were deleted!');
           }
         },
         _editSelected: function(e) {
@@ -293,6 +295,11 @@
             .join(', ');
 
           return (selectedScripts.length > 1 ? "Are you sure you want to delete these scripts: " : "Are you sure you want to delete this script: ") + names + "?";
+        },
+        _showNotification: function(title) {
+          var notification = document.querySelector('notification-element');
+          notification.title = title;
+          notification._openToast();
         }
       });
     })();
