--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -97,6 +97,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="network-item-element.html">
 <link rel="import" href="network-page-element.html">
 <link rel="import" href="network-add-element.html">
+<link rel="import" href="subnet-item-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
