--- a/app/elements/network-page-element.html
+++ b/app/elements/network-page-element.html
@@ -54,6 +54,14 @@
         </div>
       </div>
     </paper-card>
+
+    <paper-menu-button hidden$="[[!isOpenstack]]" class="fab-menu" horizontal-align="right" vertical-align="bottom">
+      <paper-fab icon="add" class="dropdown-trigger"></paper-fab>
+      <paper-menu class="dropdown-content">
+        <paper-button on-tap="_deleteNetwork">Delete Network</paper-button>
+      </paper-menu>
+    </paper-menu-button>
+    <dialog-element></dialog-element>
   </template>
 
   <script>
@@ -71,10 +79,17 @@
           id: {
             type: String
           },
+          isOpenstack: {
+            type: Boolean,
+            computed: '_computeIsOpenstack(network.cloud.provider)'
+          },
           hasSubnets: {
             type: Boolean,
             computed: '_computeHasSubnets(network.subnets)'
           },
+        },
+        listeners: {
+          'confirmation': '_deleteNetworkResponse'
         },
         _computeNetwork: function(id) {
           var current = null;
@@ -86,8 +101,41 @@
           return current;
         },
         _computeHasSubnets: function(subnets) {
-          console.log(subnets);
           return subnets.length > 0;
+        },
+        _computeIsOpenstack: function(provider) {
+          return provider == 'openstack';
+        },
+        _openFABMenu: function(e) {
+          console.log(e);
+        },
+        _deleteNetwork: function(e) {
+          this._showDialog({
+            title: 'Delete Network',
+            body: "Are you sure you want to delete this network: " + this.network.name + "?",
+            danger: true,
+            reason: "delete_network"
+          });
+        },
+        _deleteNetworkResponse: function(e) {
+          var reason = e.detail.reason,
+            response = e.detail.response;
+
+          if (response.confirmed && reason == "delete_network") {
+            console.log('i ll delete the network');
+            page.show('/networks');
+          }
+        },
+        _showDialog: function(info) {
+          var dialog = this.querySelector('dialog-element'),
+            i;
+          for (i in info) {
+            dialog[i] = info[i];
+          }
+          dialog._openDialog();
+        },
+        _formatTitle: function() {
+          return this.selectedNetworks.length > 1 ? "Delete Networks" : "Delete Network";
         }
       });
     })();
