--- a/app/elements/key-page-element.html
+++ b/app/elements/key-page-element.html
@@ -11,6 +11,10 @@
       paper-card {
         display: block;
       }
+
+      paper-menu-button paper-button {
+        display: block;
+      }
     </style>
 
     <paper-card heading="Single Key">
@@ -18,6 +22,17 @@
         <h2>[[key.id]]</h2>
       </div>
     </paper-card>
+
+    <paper-menu-button class="fab-menu" horizontal-align="right" vertical-align="bottom">
+      <paper-fab icon="add" class="dropdown-trigger"></paper-fab>
+      <paper-menu class="dropdown-content">
+        <paper-button on-tap="_deleteKey">Delete Key</paper-button>
+        <paper-button on-tap="_editKey">Rename Key</paper-button>
+        <paper-button hidden$="[[isDefault]]" on-tap="_makeDefaultKey">Make Default</paper-button>
+      </paper-menu>
+    </paper-menu-button>
+    <key-edit-element key="[[key]]"></key-edit-element>
+    <dialog-element></dialog-element>
   </template>
 
   <script>
@@ -34,7 +49,15 @@
           },
           id: {
             type: String
-          }
+          },
+          isDefault: {
+            type: String,
+            computed: '_computeIsDefault(key.isDefault)'
+          },
+        },
+        listeners: {
+          'confirmation': '_deleteKeyResponse',
+          'updateSelectedKey': '_updateKey',
         },
         _computeKey: function(id) {
           var current = null;
@@ -44,6 +67,46 @@
             }
           }, this);
           return current;
+        },
+        _computeIsDefault: function(isDefault) {
+          return isDefault;
+        },
+        _editKey: function(e) {
+          var el = this.querySelector('key-edit-element');
+          el._openEditKeyModal();
+        },
+        _updateKey: function(e) {
+          var key = e.detail.key;
+          this.set('key.id', key.id);
+        },
+        _makeDefaultKey: function(e) {
+          var isDefault = this.key.isDefault;
+          this.set('key.isDefault', true);
+        },
+        _deleteKey: function(e) {
+          this._showDialog({
+            title: 'Delete Key',
+            body: "Are you sure you want to delete this key: " + this.key.id + "?",
+            danger: true,
+            reason: "delete_key"
+          });
+        },
+        _deleteKeyResponse: function(e) {
+          var reason = e.detail.reason,
+            response = e.detail.response;
+
+          if (response.confirmed && reason == "delete_key") {
+            console.log('i ll delete the key');
+            page.show('/keys');
+          }
+        },
+        _showDialog: function(info) {
+          var dialog = this.querySelector('dialog-element'),
+            i;
+          for (i in info) {
+            dialog[i] = info[i];
+          }
+          dialog._openDialog();
         }
       });
     })();
