--- a/app/elements/script-page-element.html
+++ b/app/elements/script-page-element.html
@@ -11,6 +11,10 @@
       paper-card {
         display: block;
       }
+
+      paper-menu-button paper-button {
+        display: block;
+      }
     </style>
 
     <paper-card heading="Single Script">
@@ -18,6 +22,16 @@
         <h2>[[script.name]]</h2>
       </div>
     </paper-card>
+
+    <paper-menu-button class="fab-menu" horizontal-align="right" vertical-align="bottom">
+      <paper-fab icon="add" class="dropdown-trigger"></paper-fab>
+      <paper-menu class="dropdown-content">
+        <paper-button on-tap="_deleteScript">Delete Script</paper-button>
+        <paper-button on-tap="_editScript">Edit Script</paper-button>
+      </paper-menu>
+    </paper-menu-button>
+    <script-edit-element script="[[script]]"></script-edit-element>
+    <dialog-element></dialog-element>
   </template>
 
   <script>
@@ -36,6 +50,10 @@
             type: String
           }
         },
+        listeners: {
+          'confirmation': '_deleteScriptResponse',
+          'updateSelectedScript': '_updateScript'
+        },
         _computeScript: function(id) {
           var current = null;
           Mist.scripts.forEach(function(script) {
@@ -44,6 +62,40 @@
             }
           }, this);
           return current;
+        },
+        _editScript: function(e) {
+          var el = this.querySelector('script-edit-element');
+          el._openEditScriptModal();
+        },
+        _updateScript: function(e) {
+          var script = e.detail.script;
+          this.set('script.name', script.name);
+          this.set('script.description', script.description);
+        },
+        _deleteScript: function(e) {
+          this._showDialog({
+            title: 'Delete Script',
+            body: "Are you sure you want to delete this script: " + this.script.name + "?",
+            danger: true,
+            reason: "delete_script"
+          });
+        },
+        _deleteScriptResponse: function(e) {
+          var reason = e.detail.reason,
+            response = e.detail.response;
+
+          if (response.confirmed && reason == "delete_script") {
+            console.log('i ll delete the script');
+            page.show('/scripts');
+          }
+        },
+        _showDialog: function(info) {
+          var dialog = this.querySelector('dialog-element'),
+            i;
+          for (i in info) {
+            dialog[i] = info[i];
+          }
+          dialog._openDialog();
         }
       });
     })();
