new page with comments on the styling-quests

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -48,6 +48,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+
 
 <!-- Neon Elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
@@ -77,6 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="notification-element.html">
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="styling-quests-page-element.html">
+<link rel="import" href="styling-solutions-page-element.html">
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
 <link rel="import" href="key-item-element.html">
@@ -117,3 +120,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="token-add-element.html">
 <link rel="import" href="user-menu-element.html">
 <link rel="import" href="users.html">
+
+<!-- Coming from Polymist -->
+<link rel="import" href="app-forms/app-forms.html">
