--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -66,6 +66,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'styling-quests';
     });
 
+    page('/styling-solutions', function() {
+      app.route = 'styling-solutions';
+    });
+    
     page('/add-cloud', function() {
       app.route = 'add-cloud';
     });
