--- a/app/index.html
+++ b/app/index.html
@@ -262,6 +262,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Styling Quests</span>
           </a>
 
+          <a data-route="styling-solutions" href="/styling-solutions">
+            <iron-icon icon="code"></iron-icon>
+            <span>Styling Solutions</span>
+          </a>
+
           <a data-route="add-cloud" href="/add-cloud">
             <iron-icon icon="cloud"></iron-icon>
             <span>Add Cloud</span>
@@ -456,6 +461,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <notes-page-element data-route="notes"></notes-page-element>
 
             <styling-quests-page-element data-route="styling-quests"></styling-quests-page-element>
+
+            <styling-solutions-page-element data-route="styling-solutions"></styling-solutions-page-element>
 
             <cloud-add-element data-route="add-cloud"></cloud-add-element>
 
