styled elements library

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -69,6 +69,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page('/styling-solutions', function() {
       app.route = 'styling-solutions';
     });
+
+    page('/styling-mist', function() {
+      app.route = 'styling-mist';
+    });
     
     page('/add-cloud', function() {
       app.route = 'add-cloud';
