--- a/app/index.html
+++ b/app/index.html
@@ -267,6 +267,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Styling Solutions</span>
           </a>
 
+          <a data-route="styling-mist" href="/styling-mist">
+            <iron-icon icon="code"></iron-icon>
+            <span>Styling Mist</span>
+          </a>
+
           <a data-route="add-cloud" href="/add-cloud">
             <iron-icon icon="cloud"></iron-icon>
             <span>Add Cloud</span>
@@ -463,6 +468,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <styling-quests-page-element data-route="styling-quests"></styling-quests-page-element>
 
             <styling-solutions-page-element data-route="styling-solutions"></styling-solutions-page-element>
+
+            <styling-mist data-route="styling-mist"></styling-mist>
 
             <cloud-add-element data-route="add-cloud"></cloud-add-element>
 
