--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -82,6 +82,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="styling-quests-page-element.html">
 <link rel="import" href="styling-solutions-page-element.html">
+<link rel="import" href="styling-mist.html">
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
 <link rel="import" href="key-item-element.html">
